[package]
name = "fusion"
version = "1.0.12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fusion"
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.25"
openssl = { version = "0.10.44", features = ["vendored"] }
pyo3 = { version = "0.19.0", features = ["extension-module"] }
rand = "0.8.5"
reqwest = { version = "0.11" , features = ["stream"] }
tokio = { version = "1.23.0", features = ["rt", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7", features = ["codec"]}

