[tool]
[tool.poetry]
name = "PyFusion"
version = "1.0.12"

homepage = "https://github.com/jpmorganchase/fusion"
description = "JPMC Fusion Developer Tools"
authors = ["FusionDevs <fusion_developers@jpmorgan.com>"]
readme = "README.md"
license =  "Apache-2.0"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "fusion" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
requests = ">2.27.0"
pandas = ">1.1.1"
joblib = ">=1.1.0"
tabulate = ">=0.8.10"
tqdm = ">=4.64.0"
pyarrow = ">=4.0"
fsspec = ">=2021.6.1"
aiohttp = ">=3.7.1"

[tool.poetry.group.dev.dependencies]
types-requests = ">2.27.0"
types-tabulate = ">=0.8.8"
#patchelf = "^0.17.2.1"
markupsafe = ">=2.0.1"
jinja2 = ">2.0.0"
black = ">=22.3.0"
isort = ">=5.8.0"
flake8 = ">=3.9.2"
flake8-docstrings = ">=1.6.0"
mypy = "0.900"
pytest = ">=6.2.4"
pytest-cov = ">=2.12.0"
tox  = ">=3.20.1"
tox-conda = ">=0.8.2"
virtualenv = ">=20.2.2"
pip = ">=22.3.1"
mkdocs = ">=1.2.4"
mkdocs-material = ">=8.1.0"
mkdocs-material-extensions = ">=1.0.1"
mkdocstrings = { version = ">=0.16.0", extras=["python"]}
mkdocs-autorefs = { version = ">=0.2.1" }
mkdocs-include-markdown-plugin = { version = ">=2.8.0" }
mkdocs-git-revision-date-plugin = { version = ">=0.3.1" }
mkdocs-jupyter = {version = ">=0.22.0" }
jupyter_contrib_nbextensions = { version = ">=0.7.0"}
mike = { version = ">=1.1.2" }
twine  = { version = "^3.3.0" }
pre-commit = { version = "^2.12.0" }
toml = { version = "^0.10.2" }
bump2version = { version = "^1.0.1" }
maturin = "^1.1.0"


[tool.poetry.extras]
aws = [
    "s3fs"
]

gcs = [
    "gcsfs"
]

azr = [
    "adlfs"
]


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "fusion._internal"
